<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.DetailActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppBarLayoutTheme">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="...">

                <ImageView
                    android:id="@+id/mealThumb"
                    android:layout_width="match_parent"
                    android:layout_height="234dp"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-7dp"
                    android:indeterminate="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:cardCornerRadius="10dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textCategory"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="14dp"
                                android:paddingTop="14dp"
                                android:paddingRight="14dp"
                                android:text="@string/category"
                                android:textColor="@color/colorPrimaryDark" />

                            <TextView
                                android:id="@+id/category"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="14dp"
                                android:paddingTop="5dp"
                                android:paddingRight="14dp"
                                android:paddingBottom="14dp"
                                android:text="@string/dots"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="16sp" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:cardCornerRadius="10dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/Country"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="14dp"
                                android:paddingTop="14dp"
                                android:paddingRight="14dp"
                                android:text="@string/country"
                                android:textColor="@color/colorPrimaryDark" />

                            <TextView
                                android:id="@+id/country"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="14dp"
                                android:paddingTop="5dp"
                                android:paddingRight="14dp"
                                android:paddingBottom="14dp"
                                android:text="@string/dots"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="5dp"
                    android:drawableEnd="@drawable/ic_info_24dp"
                    android:drawableRight="@drawable/ic_info_24dp"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/instructions"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/instructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="14dp"
                        android:paddingTop="15dp"
                        android:paddingRight="14dp"
                        android:paddingBottom="15dp"
                        android:text="@string/dots"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="16sp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14dp"
                            android:paddingLeft="14dp"
                            android:paddingRight="14dp"
                            android:text="@string/ingredients"
                            android:textColor="@color/colorPrimaryDark" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/ingredient"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="14dp"
                                    android:paddingRight="14dp"
                                    android:textColor="@color/colorPrimaryText"
                                    android:textSize="16sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/measure"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="14dp"
                                    android:paddingRight="14dp"
                                    android:textColor="@color/colorPrimaryText"
                                    android:textSize="16sp" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#FFE1E1"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:id="@+id/youtube"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:drawableStart="@drawable/ic_play_24dp"
                            android:drawableLeft="@drawable/ic_play_24dp"
                            android:drawablePadding="10dp"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:padding="14dp"
                            android:text="@string/youtube"
                            android:textColor="#EC2D2D"
                            android:textSize="16sp" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#D0FFDB"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:id="@+id/source"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:drawableStart="@drawable/ic_link_24dp"
                            android:drawableLeft="@drawable/ic_link_24dp"
                            android:drawablePadding="10dp"
                            android:focusable="true"
                            android:gravity="center_vertical"
                            android:padding="14dp"
                            android:text="@string/source"
                            android:textColor="#2A7E2F"
                            android:textSize="16sp" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>